trying to fix font on safari

--- a/public/assets/css/custom-style.css
+++ b/public/assets/css/custom-style.css
@@ -7,8 +7,6 @@ html, body {
     /* background-color: black; */
     -webkit-font-smoothing: subpixel-antialiased;
     -webkit-backface-visibility: hidden;
-
-
 }
 p {
     /* -webkit-font-smoothing: antialiased; */
@@ -184,6 +182,10 @@ p {
 
 .display-visibility {
     display: none;
+}
+.gallery-first-slide {
+    -webkit-transform: translateZ(0) scale(1.0, 1.0);
+transform: translateZ(0);
 }
 
 .gallery-first-slide h1 {
